<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="Quiz Con" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_text"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_button_1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1a" />

            <RadioButton
                android:id="@+id/answer_button_1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1b" />

            <RadioButton
                android:id="@+id/answer_button_1c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1c" />

            <RadioButton
                android:id="@+id/answer_button_1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1d" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/question_2_text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_button_2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2a" />

            <RadioButton
                android:id="@+id/answer_button_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2b" />

            <RadioButton
                android:id="@+id/answer_button_2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2c" />

            <RadioButton
                android:id="@+id/answer_button_2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2d" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/question_3_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkbox_aquaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3a" />

            <CheckBox
                android:id="@+id/checkbox_gorillaGrodd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3b" />

            <CheckBox
                android:id="@+id/checkbox_cyborg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3c"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/question_4_text"  />

        <EditText
            android:id="@+id/answer_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Type Answer"
            android:inputType="textCapWords"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitResult"
            android:textSize="16sp"
            android:text="Submit Quiz" />

        <TextView
            android:id="@+id/submit_quiz_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
